# rust-ray-tracer

./: .gitignore  Cargo.toml  README.md
ray_tracer_lib/: Cargo.toml
ray_tracer_lib/src/: camera.rs  color.rs  lib.rs  material.rs  phong_lighting.rs  png_encoder.rs  point_light.rs  ppm.rs  transformations.rs  world.rs
ray_tracer_lib/src/mathf/: matrix.rs  plane.rs  ray.rs  shapes.rs  sphere.rs  vector3.rs
ray_tracer_main/: Cargo.toml
ray_tracer_wasm/: Cargo.toml  package-lock.json  webpack.config.js
ray_tracer_wasm/js/: index.js
ray_tracer_wasm/src/: lib.rs
ray_tracer_wasm/static/: index.html
ray_tracer_wasm/worker/: worker.js
renders/: circle.ppm  clock.ppm  output.ppm
src/: camera.rs  canvas.rs  color.rs  lib.rs  material.rs  phong_lighting.rs  point_light.rs  ppm.rs  transformations.rs  world.rs
src/mathf/: canvas.rs  color.rs  intersection.rs  matrix.rs  mod.rs  ppm.rs  ray.rs  sphere.rs  vector3.rs  vector4.rs
