[package]
name = "rust_ray_tracer"
version = "0.1.0"
authors = ["Will Fleming <wfleming77@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "rust_ray_tracer"
path = "src/lib.rs"

[[bin]]
name = "rust_ray_tracer"
path = "src/bin/main.rs"

[dependencies]
num = "0.2.0"