[workspace]

members = [
    "ray_tracer_main",
    "ray_tracer_lib",
    "ray_tracer_wasm",
]

default-members = [
    "ray_tracer_main"
]

[profile.release]
# This makes the compiled code faster and smaller, but it makes compiling slower,
# so it's only enabled in release mode.
lto = true
# debug = true
