[package]
name = "ray_tracer_lib"
version = "0.1.0"
authors = ["Will Fleming <wfleming77@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "ray_tracer_lib"
path = "src/lib.rs"


[dependencies]
num = "0.2.0"
rayon = "1.3.0"
png = "0.15.3"
#wasm-bindgen = "0.2.45"

# [profile.release]
# debug = true