[package]
name = "ray_tracer_main"
version = "0.1.0"
authors = ["Will Fleming <wfleming77@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[[bin]]
name = "ray_tracer_main"
path = "src/bin/main.rs"

[dependencies]


ray_tracer_lib = { path = "../ray_tracer_lib" }
